# game-ui-valgrind-test

./: .gitignore  CMakeLists.txt  main.cpp  main.h
constants/: colour.cpp  colour.h
exceptions/: InitError.cpp  InitError.h
initialisers/: InitConstants.cpp  InitConstants.h
settings/: Resolution.cpp  Resolution.h
utilities/colour/: Colour.cpp  Colour.h  ColourGroup.cpp  ColourGroup.h
utilities/font/: Font.cpp  Font.h  FontStyle.cpp  FontStyle.h
utilities/geometry/: Point.cpp  Point.h
utilities/image/: Image.cpp  Image.h  ImageCollection.cpp  ImageCollection.h
utilities/primitives/: Rect.cpp  Rect.h
utilities/user-interface/: Box.cpp  Box.h  Button.cpp  Button.h  Panel.cpp  Panel.h  TextBox.cpp  TextBox.h
